--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
           <p>Projects</p>
         </div>
         <div class="back">
-          <a href="https://github.com/neel07sanghvi/DarwinBox" target="_blank">
+          <a
+            href="https://github.com/neel07sanghvi/Landing_page_ts"
+            target="_blank"
+          >
             <p>DarwinBox</p></a
           >
           <a href="https://github.com/neel07sanghvi/Covid-Help" target="_blank"
