--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
         </div>
       </div>
       <div class="proj">
-        <div class="front">
-          <p>Projects</p>
-        </div>
-        <div class="back">
+        <div class="titleProjects"><p>Projects</p></div>
+        <div class="projectNames">
           <a
             href="https://github.com/neel07sanghvi/Landing_page_ts"
             target="_blank"
@@ -107,6 +105,6 @@
       </div>
       <div class="container2"></div>
     </div>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./public/main.js"></script>
   </body>
 </html>
