--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Neel Sanghvi</title>
   </head>
   <body>
+    <div class="progress-bar-container">
+      <label for="progress-bar"> Loading... </label>
+      <progress id="progress-bar" value="0" max="100"></progress>
+    </div>
     <div id="app">
       <div class="info">
         <div class="textInfo">
