--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <div id="app">
-      <!-- <div class="progress-bar-container">
+      <div class="progress-bar-container">
         <label for="progress-bar"> Loading ... </label>
         <progress id="progress-bar" value="0" max="100"></progress>
-      </div> -->
+      </div>
       <div class="info">
         <div class="textInfo">
           <p>Scroll Up, To Travel The Space !</p>
