--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         <div class="email">
           <a href="mailto:neel07sanghvi@gmail.com"><p>Contact Me!</p></a>
         </div>
+        <div class="line"></div>
         <div class="resume">
           <a
             href="https://drive.google.com/file/d/1w26zcdpsGbIyaP5CwYba2T89x_XwoDvW/view?usp=sharing"
